--- a/res/css/style.css
+++ b/res/css/style.css
@@ -82,8 +82,10 @@ nav div {
 
 nav div img {
     height: 100%;
+    width: 30px;
     margin-left: 15px;
     border-radius: 100%;
+    object-fit: cover;;
 }
 
 nav div.search-container > input {
