--- a/res/css/style.css
+++ b/res/css/style.css
@@ -202,3 +202,36 @@ nav div.avatar-container {
 .like-button.liked {
     background-color: #01579b;
 }
+
+
+
+
+.avatar-container {
+    position: relative;
+}
+
+.avatar-submenu {
+    display: none;
+    background-color: #ffffff;
+    position: absolute;
+    min-width: 125px;
+    min-height: 125px;
+    right: 0;
+
+}
+
+.avatar-submenu-list {
+    list-style: none;
+    text-align: left;
+    padding-left: 0px;
+    }
+
+.avatar-submenu-list a {
+    display: block;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    border-top: 1px solid #D3D3D3;
+}
+
+}
+
