Load posts data and interactive button

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -173,6 +173,14 @@ nav div.avatar-container {
     object-position: top center;
 }
 
+.post .post-image video {
+    width: 100%;
+    min-height: 150px;
+    max-height: 350px;
+    object-fit: cover;
+    object-position: top center;
+}
+
 .post .post-title {
     padding: 10px;
 }
